--- a/OpticalValleyUnite/Classes/UI/HouseQuery/ViewController/YQHouseRelativesAndTenant.storyboard
+++ b/OpticalValleyUnite/Classes/UI/HouseQuery/ViewController/YQHouseRelativesAndTenant.storyboard
@@ -22,7 +22,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IXx-lG-PSd">
-                                <rect key="frame" x="0.0" y="64" width="375" height="45"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="45"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ty6-yp-0rU">
                                         <rect key="frame" x="0.0" y="0.0" width="187.5" height="45"/>
@@ -66,7 +66,7 @@
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6Pd-Si-llk">
-                                <rect key="frame" x="0.0" y="109" width="375" height="558"/>
+                                <rect key="frame" x="0.0" y="65" width="375" height="602"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
                         </subviews>
@@ -74,7 +74,7 @@
                         <constraints>
                             <constraint firstItem="IXx-lG-PSd" firstAttribute="leading" secondItem="Znr-ta-WLW" secondAttribute="leading" id="3o4-Ue-5Nj"/>
                             <constraint firstItem="6Pd-Si-llk" firstAttribute="top" secondItem="IXx-lG-PSd" secondAttribute="bottom" id="XRK-jB-YdW"/>
-                            <constraint firstItem="IXx-lG-PSd" firstAttribute="top" secondItem="ZPL-sM-Rn9" secondAttribute="bottom" constant="44" id="jX2-tQ-XQ2"/>
+                            <constraint firstItem="IXx-lG-PSd" firstAttribute="top" secondItem="ZPL-sM-Rn9" secondAttribute="bottom" id="jX2-tQ-XQ2"/>
                             <constraint firstAttribute="trailing" secondItem="6Pd-Si-llk" secondAttribute="trailing" id="lTq-O9-sUN"/>
                             <constraint firstItem="6Pd-Si-llk" firstAttribute="leading" secondItem="Znr-ta-WLW" secondAttribute="leading" id="saf-io-exs"/>
                             <constraint firstAttribute="trailing" secondItem="IXx-lG-PSd" secondAttribute="trailing" id="xDc-TK-ZdM"/>
