--- a/OpticalValleyUnite/Classes/UI/HouseQuery/View/YQOwnerAndTenantCell.xib
+++ b/OpticalValleyUnite/Classes/UI/HouseQuery/View/YQOwnerAndTenantCell.xib
@@ -11,11 +11,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="98" id="KGk-i7-Jjw" customClass="YQOwnerAndTenantCell" customModule="OpticalValleyUnite" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="tenantCell" rowHeight="98" id="KGk-i7-Jjw" customClass="YQOwnerAndTenantCell" customModule="OpticalValleyUnite" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="397" height="98"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="397" height="98"/>
+                <rect key="frame" x="0.0" y="0.0" width="397" height="97.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="与业主关系:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="STQ-LQ-w8a">
@@ -71,9 +71,11 @@
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="nameLabel" destination="H2p-sc-9uM" id="Lzy-4k-7UK"/>
+                <outlet property="nameLabel" destination="w9E-CH-2rH" id="8Es-GQ-DUa"/>
                 <outlet property="relationshipLabel" destination="JEE-Dn-WrP" id="nLv-ef-tCc"/>
                 <outlet property="telLabel" destination="X69-FW-t5S" id="600-2z-FCD"/>
+                <outlet property="titleNameLabel" destination="S1y-xI-4sE" id="DQW-om-cOh"/>
+                <outlet property="titleTelLabel" destination="iaT-WV-33u" id="CJ2-WG-iED"/>
             </connections>
             <point key="canvasLocation" x="63.5" y="79"/>
         </tableViewCell>
