--- a/OpticalValleyUnite/Classes/UI/HouseQuery/View/YQWorkListCell.xib
+++ b/OpticalValleyUnite/Classes/UI/HouseQuery/View/YQWorkListCell.xib
@@ -11,11 +11,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="102" id="KGk-i7-Jjw" customClass="YQWorkListCell" customModule="OpticalValleyUnite" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="WorkListCell" rowHeight="102" id="KGk-i7-Jjw" customClass="YQWorkListCell" customModule="OpticalValleyUnite" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="307" height="102"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="307" height="102"/>
+                <rect key="frame" x="0.0" y="0.0" width="307" height="101.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pRQ-Li-0Pd">
