--- a/OpticalValleyUnite/Classes/UI/HouseQuery/ViewController/YQWorkListVC.storyboard
+++ b/OpticalValleyUnite/Classes/UI/HouseQuery/ViewController/YQWorkListVC.storyboard
@@ -24,7 +24,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aVq-zZ-360">
                                 <rect key="frame" x="0.0" y="20" width="375" height="45"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bxC-XU-gz6">
+                                    <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bxC-XU-gz6">
                                         <rect key="frame" x="0.0" y="0.0" width="125" height="45"/>
                                         <state key="normal" title="报事">
                                             <color key="titleColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -32,8 +32,11 @@
                                         <state key="selected">
                                             <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
+                                        <connections>
+                                            <action selector="selecteButtonClick:" destination="txc-Qb-SZN" eventType="touchUpInside" id="bHi-BP-PFG"/>
+                                        </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="34Q-bl-N5W">
+                                    <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="34Q-bl-N5W">
                                         <rect key="frame" x="125" y="0.0" width="125" height="45"/>
                                         <state key="normal" title="报装申请">
                                             <color key="titleColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -41,8 +44,11 @@
                                         <state key="selected">
                                             <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
+                                        <connections>
+                                            <action selector="selecteButtonClick:" destination="txc-Qb-SZN" eventType="touchUpInside" id="MN8-FA-3Sb"/>
+                                        </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fab-rm-wEa">
+                                    <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fab-rm-wEa">
                                         <rect key="frame" x="250" y="0.0" width="125" height="45"/>
                                         <state key="normal" title="工单查询">
                                             <color key="titleColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -50,6 +56,9 @@
                                         <state key="selected">
                                             <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
+                                        <connections>
+                                            <action selector="selecteButtonClick:" destination="txc-Qb-SZN" eventType="touchUpInside" id="e3s-8o-owa"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -72,6 +81,10 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="sBx-6G-0C7">
                                 <rect key="frame" x="0.0" y="65" width="375" height="602"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="txc-Qb-SZN" id="L0g-0C-scm"/>
+                                    <outlet property="delegate" destination="txc-Qb-SZN" id="n02-zw-aGR"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -85,10 +98,14 @@
                             <constraint firstItem="aVq-zZ-360" firstAttribute="leading" secondItem="Kv9-Nz-MIW" secondAttribute="leading" id="qfr-vD-9c9"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="reportBtn" destination="bxC-XU-gz6" id="s3G-6z-zja"/>
+                        <outlet property="tableView" destination="sBx-6G-0C7" id="YW5-BW-X8t"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9ap-bo-rgS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="192.80000000000001" y="175.86206896551727"/>
+            <point key="canvasLocation" x="-105" y="134"/>
         </scene>
     </scenes>
 </document>
