--- a/OpticalValleyUnite/Classes/UI/EquipmentRoom/View/YQEquipHomeListCell.xib
+++ b/OpticalValleyUnite/Classes/UI/EquipmentRoom/View/YQEquipHomeListCell.xib
@@ -11,78 +11,44 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="104" id="KGk-i7-Jjw" customClass="YQEquipHomeListCell" customModule="OpticalValleyUnite" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="361" height="104"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="135" id="KGk-i7-Jjw" customClass="YQEquipHomeListCell" customModule="OpticalValleyUnite" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="386" height="135"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="361" height="103.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="386" height="134.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="温度:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8BP-Ec-E3m">
-                        <rect key="frame" x="105" y="80.5" width="35" height="18"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <color key="textColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="湿度:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pk6-YB-4t0">
-                        <rect key="frame" x="235" y="80.5" width="35" height="18"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <color key="textColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="POq-gv-Nmz">
-                        <rect key="frame" x="90" y="5" width="266" height="68"/>
+                        <rect key="frame" x="90" y="5" width="291" height="50"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="50" id="uGo-Rc-XIt"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                     </textView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j3G-dp-EvG" customClass="ShowImageView" customModule="OpticalValleyUnite" customModuleProvider="target">
-                        <rect key="frame" x="5" y="5" width="80" height="93.5"/>
+                        <rect key="frame" x="5" y="5" width="80" height="80"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="80" id="J2O-Zo-ZPQ"/>
+                            <constraint firstAttribute="height" constant="80" id="gst-gp-5mC"/>
                         </constraints>
                     </view>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gbs-4g-BQV">
-                        <rect key="frame" x="90" y="78.5" width="15" height="20"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="20" id="Tnf-7x-FAf"/>
-                            <constraint firstAttribute="width" constant="15" id="dTt-OP-9Kj"/>
-                        </constraints>
-                    </imageView>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="59p-nq-emq">
-                        <rect key="frame" x="220" y="78" width="15" height="20"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="20" id="RmV-0L-zmP"/>
-                            <constraint firstAttribute="width" constant="15" id="yHB-O7-xTB"/>
-                        </constraints>
-                    </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="gbs-4g-BQV" firstAttribute="leading" secondItem="j3G-dp-EvG" secondAttribute="trailing" constant="5" id="6Vq-cG-T9V"/>
-                    <constraint firstItem="59p-nq-emq" firstAttribute="bottom" secondItem="j3G-dp-EvG" secondAttribute="bottom" id="6jG-WL-MVw"/>
                     <constraint firstItem="POq-gv-Nmz" firstAttribute="leading" secondItem="j3G-dp-EvG" secondAttribute="trailing" constant="5" id="Cok-Ce-Ug2"/>
                     <constraint firstAttribute="trailing" secondItem="POq-gv-Nmz" secondAttribute="trailing" constant="5" id="S8Z-8F-gxJ"/>
-                    <constraint firstItem="Pk6-YB-4t0" firstAttribute="leading" secondItem="59p-nq-emq" secondAttribute="trailing" id="ZKw-xj-vDd"/>
                     <constraint firstItem="j3G-dp-EvG" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="eZf-U7-mnW"/>
-                    <constraint firstItem="8BP-Ec-E3m" firstAttribute="leading" secondItem="gbs-4g-BQV" secondAttribute="trailing" id="iTE-kM-msO"/>
-                    <constraint firstItem="gbs-4g-BQV" firstAttribute="bottom" secondItem="j3G-dp-EvG" secondAttribute="bottom" id="kJe-qK-8dk"/>
-                    <constraint firstItem="59p-nq-emq" firstAttribute="top" secondItem="POq-gv-Nmz" secondAttribute="bottom" constant="5" id="kLw-1m-jjv"/>
                     <constraint firstItem="POq-gv-Nmz" firstAttribute="top" secondItem="j3G-dp-EvG" secondAttribute="top" id="mdk-oQ-U4Q"/>
-                    <constraint firstItem="59p-nq-emq" firstAttribute="leading" secondItem="8BP-Ec-E3m" secondAttribute="trailing" constant="80" id="ofR-Vp-HwB"/>
                     <constraint firstItem="j3G-dp-EvG" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="qDF-le-YSu"/>
-                    <constraint firstAttribute="bottom" secondItem="j3G-dp-EvG" secondAttribute="bottom" constant="5" id="s1u-su-ZZo"/>
-                    <constraint firstItem="8BP-Ec-E3m" firstAttribute="bottom" secondItem="j3G-dp-EvG" secondAttribute="bottom" id="wLZ-16-ZI1"/>
-                    <constraint firstItem="Pk6-YB-4t0" firstAttribute="bottom" secondItem="j3G-dp-EvG" secondAttribute="bottom" id="zVU-wa-Agc"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="humidityLabel" destination="Pk6-YB-4t0" id="ySH-Wz-wbb"/>
                 <outlet property="showContentView" destination="POq-gv-Nmz" id="9iU-hW-BIU"/>
                 <outlet property="showImageView" destination="j3G-dp-EvG" id="cLB-76-AtX"/>
-                <outlet property="temperatureLabel" destination="8BP-Ec-E3m" id="Tb2-o6-V7O"/>
             </connections>
-            <point key="canvasLocation" x="45.5" y="82"/>
+            <point key="canvasLocation" x="38" y="281.5"/>
         </tableViewCell>
     </objects>
 </document>
